css/default.css
/* ============================================================================
 * default.css
 * ============================================================================
 * 
 * 制作者：虹川郷鬼
 * 
 * This is the general stylesheet.
 * 
 */

/* /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\  *
 * Importing web fonts
 * \/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/  */

/* Noto Sans Japanese */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP');

/* Noto Serif Japanese */
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP');

/* Noto Sans Myanmar */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar');

/* Noto Sans */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans');

/* Noto Sans Simplified Chinese */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC');

/* Noto Sans Traditional Chinese */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC');

/* Noto Serif Devanagari */
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Devanagari');

/* Noto Sans Georgian */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian');

/* Noto Sans Korean */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR');

/* Noto Sans Malayalam */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam');

/* Noto Sans Mongolian */
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mongolian');

/* Noto Naskh Arabic */
@import url('https://fonts.googleapis.com/css2?family=Noto+Naskh+Arabic');

/* Noto Nastaliq Urdu */
@import url('https://fonts.googleapis.com/css2?family=Noto+Nastaliq+Urdu');

/* Noto Serif Tibetan */
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Tibetan');

/* /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\  *
 * Main stylesheets
 * \/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/  */

/* ------------------------------------------------------------------------- *
 * Stylesheet for anchor links
 * ------------------------------------------------------------------------- */

/* Unvisited links */
a:link {
    color: #99c3ff;
}

/* ------------------------------------------------------------------------- *
 * Stylesheet for the entire document body
 * ------------------------------------------------------------------------- */

body {
    background-color: #121212;
    padding-right: 2px;
    padding-left: 2px;
}

/* ------------------------------------------------------------------------- *
 * Stylesheet for paragraphs
 * ------------------------------------------------------------------------- */

/* _default */
p {
    font-family: 'ヒラギノ丸ゴ Pro W4', 'Noto Sans CJK JP', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
    color: #e5e5e5;
    font-size: 1.25em;
}

/* Captions! */
p.caption {
    padding: 0px;
    margin: 2px;
    color: #ffffff;
}

/* COMING AT SOME POINT!! */
p.coming-soon {
    text-align: center;
    font-size: 10.67em;
    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
}

/* Pride heading */
p.pride-head {
    text-align: center;
    font-size: 1.7em;
    font-family: 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
    color: #000000;
}

/* Pronouns */
p.pronouns {
    padding-left: 2px;
    font-size: 1.4em;
    font-family: 'ヒラギノ丸ゴ Pro W4', 'Noto Sans CJK JP', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
    color: #000000;
}

/* ------------------------------------------------------------------------- *
 * Stylesheet for headings
 * ------------------------------------------------------------------------- */

/* _default (Heading 1 / #) */
h1 {
    font-size: 2.63em;
    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
    color: #e5e5e5;
    line-height: 1em;
    margin-bottom: auto;
    text-align: center;
}

/* Header text */
h1.header-text {
    font-family: 'HGTakahashiReishotai', 'ヒラギノ角ゴ Std W8', 'Noto Sans CJK JP Black', 'ＭＳ ゴシック', 'Noto Sans JP', sans-serif;
    font-size: 2.25em;
}

/* _default (Heading 2 / ##) */
h2 {
    font-size: 2.31em;
    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
    color: #e5e5e5;
    line-height: 1em;
    margin-bottom: auto;
    text-align: center;
}

/* Gallery Headings */
h2.art-heading {
    text-align: left;
}

/* _default (Heading 3 / ###) */
h3 {
    font-size: 2em;
    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
    color: #e5e5e5;
    line-height: 1em;
    margin-bottom: auto;
    text-align: center;
}

/* _default (Heading 4 / ####) */
h4 {
    font-size: 1.5em;
    font-family: 'ヒラギノ角ゴ Pro W6', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
    color: #e5e5e5;
    line-height: 1em;
    margin-bottom: auto;
    text-align: center;
}

/* For the section headings on the staff credits page */
h4.credits-head {
    font-family: 'HGTakahashiReishotai', 'ヒラギノ明朝 Pro W6', 'Noto Serif CJK JP', 'Noto Serif JP', serif;
}

/* _default (Heading 5 / #####) */
h5 {
    font-size: 1.31em;
    font-family: 'ヒラギノ角ゴ Pro W6', 'Noto Sans CJK JP', 'Noto Sans JP', sans-serif;
    color: #e5e5e5;
    line-height: 1em;
    margin-bottom: auto;
    text-align: center;
}

/* ------------------------------------------------------------------------- *
 * Stylesheet for furigana
 * ------------------------------------------------------------------------- */

/* _default */
rt {
    font-size: 0.55em; /* see https://www.w3.org/TR/jlreq/?lang=en#ruby_and_emphasis_dots for more details */
}

/* For furigana on <h2> elements */
rt.head-furigana {
    font-size: 37%;
}

/* For the heading furigana in the summary page */
rt.top-head-furigana {
    font-size: 50%;
}
/* ... */

